[package]
name = "leptos-image-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
image-rs = { path = "../../", features = ["lep"] }
leptos = { version = "0.8.0", features = ["csr"] }
wasm-logger = "0.2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
